tests/snapshots/cli_tests__view_invalid_date_format_extra_chars.snap
---
source: tests/cli_tests.rs
expression: stderr
---
error: invalid value '2025-11-01' for '--month <YYYY-MM>': Month must be in format YYYY-MM, e.g. 2025-11

For more information, try '--help'.
